@@ -18,29 +18,29 @@ package org.bonitasoft.web.designer.migration;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.bonitasoft.web.designer.builder.FragmentBuilder;
 import org.bonitasoft.web.designer.model.data.DataType;
 import org.bonitasoft.web.designer.model.data.Variable;
 import org.bonitasoft.web.designer.model.fragment.Fragment;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-@RunWith(MockitoJUnitRunner.class)
-public class DataExposedMigrationStepTest {
+@ExtendWith(MockitoExtension.class)
+class DataExposedMigrationStepTest {
 
     DataExposedMigrationStep dataExposedMigrationStep;
 
-    @Before
-    public void setUp() throws Exception {
+    @BeforeEach
+    void setUp() {
         dataExposedMigrationStep = new DataExposedMigrationStep();
     }
 
     @Test
-    public void should_migrate_fragment_when_data_is_exposed() throws Exception {
+    void should_migrate_fragment_when_data_is_exposed() throws Exception {
         Fragment fragment = FragmentBuilder.aFilledFragment("myFragment");
         Variable variable = new Variable(DataType.JSON, "{}");
         variable.setExposed(true);
@@ -48,13 +48,13 @@ public class DataExposedMigrationStepTest {
 
         dataExposedMigrationStep.migrate(fragment);
 
-        assertThat(fragment.getVariables().get("myExposedVariable").isExposed()).isEqualTo(true);
+        assertThat(fragment.getVariables().get("myExposedVariable").isExposed()).isTrue();
         assertThat(fragment.getVariables().get("myExposedVariable").getType()).isEqualTo(DataType.CONSTANT);
-        assertThat(fragment.getVariables().get("myExposedVariable").getValue()).isEqualTo(Arrays.asList(""));
+        assertThat(fragment.getVariables().get("myExposedVariable").getValue()).isEqualTo(List.of(""));
     }
 
     @Test
-    public void should_not_migrate_fragment_when_data_is_not_exposed() throws Exception {
+    void should_not_migrate_fragment_when_data_is_not_exposed() throws Exception {
         Fragment fragment = FragmentBuilder.aFilledFragment("myFragment");
         Variable variable = new Variable(DataType.JSON, "{}");
         variable.setExposed(false);
@@ -62,8 +62,8 @@ public class DataExposedMigrationStepTest {
 
         dataExposedMigrationStep.migrate(fragment);
 
-        assertThat(fragment.getVariables().get("myNotExposedVariable").isExposed()).isEqualTo(false);
+        assertThat(fragment.getVariables().get("myNotExposedVariable").isExposed()).isFalse();
         assertThat(fragment.getVariables().get("myNotExposedVariable").getType()).isEqualTo(DataType.JSON);
-        assertThat(fragment.getVariables().get("myNotExposedVariable").getValue()).isEqualTo(Arrays.asList("{}"));
+        assertThat(fragment.getVariables().get("myNotExposedVariable").getValue()).isEqualTo(List.of("{}"));
     }
 }
